# ralph4days

./: .envrc  .gitignore  .mcp.json  .tmp-wdio-session-probe.mjs  2026-02-07-local-command-caveatcaveat-the-messages-below-w.txt  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MOCK_BACKEND.md  NO_BACKWARDS_COMPATIBILITY.md  PROJECT_LOCK_IMPLEMENTATION.md  README.md  biome.json  components.json  index.html  justfile  mcp-dev-server.ts  package.json  playwright.config.ts  pnpm-lock.yaml  test-cli.sh  test-task-creation.sh  tmp-wdio-request-dump.mjs  vite.config.ts  vitest.config.ts  vitest.storybook.config.ts  wdio.conf.js
crates/predefined-disciplines/: .gitignore  CLAUDE.md  Cargo.toml  IMAGE_REVIEW_CHECKLIST.md  README.md  analyze_image.py  build.rs  compose_stack.py  detect_faces.py  extract_colors.py
crates/predefined-disciplines/src/: image_prompts.yaml  lib.rs
crates/predefined-disciplines/src/comfyui_workflows/: generate_discipline.json  generate_discipline_main_test.json  templatize.sh
crates/predefined-disciplines/src/defaults/disciplines/01_generic/: 00_implementation.yaml  01_refactoring.yaml  02_investigation.yaml  03_testing.yaml  04_architecture.yaml  05_devops.yaml  06_security.yaml  07_documentation.yaml  ABOUT.yaml
crates/predefined-disciplines/src/defaults/disciplines/02_desktop/: 00_frontend.yaml  01_backend.yaml  02_data.yaml  (+6 more)
crates/prompt-builder/: Cargo.toml
crates/prompt-builder/src/: context.rs  error.rs  lib.rs  output.rs  recipe.rs  snapshot.rs  stagnation.rs
crates/prompt-builder/src/mcp/: helpers.rs  mod.rs  package.json  task_signals_server.ts  tools.rs
crates/prompt-builder/src/recipes/: braindump.rs  discuss.rs  enrichment.rs  mod.rs  opus_review.rs  ramble.rs  task_exec.rs  yap.rs
crates/prompt-builder/src/sections/: codebase_state.rs  dependency_context.rs  discipline_listing.rs  discipline_persona.rs  feature_context.rs  feature_files.rs  feature_listing.rs  feature_state.rs  metadata.rs  mod.rs  previous_attempts.rs  project_context.rs  project_metadata.rs  state_files.rs  task_details.rs  task_files.rs  task_listing.rs  user_input.rs
crates/prompt-builder/src/sections/instructions/: braindump.rs  discuss.rs  enrichment.rs  mod.rs  opus_review.rs  ramble.rs  task_exec.rs  yap.rs
crates/ralph-contracts/: Cargo.toml
crates/ralph-contracts/src/: events.rs  lib.rs  protocol.rs  terminal.rs  transport.rs
crates/ralph-external/: Cargo.toml
crates/ralph-external/src/: comfy.rs  comfy_discipline.rs  comment_embeddings.rs  config.rs  lib.rs  ollama.rs
crates/ralph-external/tests/: comment_embeddings_test.rs  pipeline_smoke_test.rs  semantic_embedding_test.rs
crates/ralph-rag/: Cargo.toml  README.md
crates/ralph-rag/src/: config.rs  embedding.rs  extraction.rs  journal.rs  learning.rs  lib.rs  model.rs  qdrant_schema.rs
crates/sqlite-db/: Cargo.toml
crates/sqlite-db/src/: acronym.rs  agent_sessions.rs  comment_embeddings.rs  comments.rs  disciplines.rs  errors.rs  export.rs  feature_comments.rs  features.rs  helpers.rs  image_prompts.rs  lib.rs  metadata.rs  prompt_builder_configs.rs  recipe_configs.rs  signals.rs  stack_metadata.rs  stats.rs  subsystem_comments.rs  subsystems.rs  tasks.rs  types.rs
crates/sqlite-db/src/defaults/: image_prompts.yaml
crates/sqlite-db/src/migrations/: 001_initial.sql  002_discipline_description_image_prompt.sql  002_feature_comments.sql  002_feature_rag_fields.sql  003_comment_embeddings.sql  003_draft_status_pseudocode.sql  003_recipe_configs.sql  004_add_comment_summary.sql  004_add_discipline_stack_id.sql  005_drop_comment_author.sql  006_nested_comments_priority.sql  007_author_fk.sql
crates/sqlite-db/tests/: crud_operations.rs  stack_metadata.rs
crates/yaml-db/: BUGFIXES.md  Cargo.toml  README.md
crates/yaml-db/src/: acronym.rs  database.rs  disciplines.rs  entity.rs  features.rs  lib.rs  metadata.rs  migration.rs  tasks.rs
crates/yaml-db/src/database/: comments.rs  disciplines.rs  features.rs  mod.rs  stats.rs  tasks.rs
crates/yaml-db/tests/: acronym_tests.rs  bug_fixes.rs  crud_operations.rs  duplicate_validation_tests.rs  edge_cases.rs  generate_snapshots.rs  golden_tests.rs  migrate_snapshots.rs  transformation_tests.rs
crates/yaml-db/tests/snapshots/: golden_tests__disciplines_yaml_custom.snap  golden_tests__disciplines_yaml_defaults.snap  golden_tests__features_yaml.snap  golden_tests__full_db_disciplines.snap  golden_tests__full_db_features.snap  golden_tests__full_db_metadata.snap  golden_tests__full_db_tasks.snap  golden_tests__metadata_no_counters.snap  golden_tests__metadata_with_counters.snap  golden_tests__metadata_yaml.snap  golden_tests__task_all_fields.snap  golden_tests__task_minimal_fields.snap  golden_tests__task_priorities.snap  golden_tests__task_statuses.snap  golden_tests__task_with_comments.snap  golden_tests__tasks_yaml.snap
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: api_server.rs  claude_client.rs  commands.rs  diagnostics.rs  errors.rs  event_sink.rs  lib.rs  loop_engine.rs  main.rs  mcp_generator.rs  prd.rs  prompt_builder.rs  pty_session.rs  recent_projects.rs  remote.rs  types.rs  xdg.rs
src-tauri/src/commands/: agent_sessions.rs  features.rs  image_gen.rs  mod.rs  project.rs  prompts.rs  protocol.rs  remote.rs  state.rs  subsystems.rs  tasks.rs  terminal.rs  terminal_bridge.rs
src-tauri/src/terminal/: contract.rs  events.rs  manager.rs  mappers.rs  mod.rs  session.rs
src-tauri/src/terminal/providers/: claudecode-models.yaml  claudecode.rs  codex-models.yaml  codex.rs  mod.rs  model_catalog.rs  shell.rs  trait.rs
src-tauri/src/yaml_db/: database.rs  disciplines.rs  features.rs  metadata.rs  mod.rs  tasks.rs
src-tauri/tests/: generate_fixtures.rs  initialization_test.rs  invoke_command_list_contract_test.rs
src-tauri/tests/generate_fixtures/: fixture_01_blank.rs  fixture_02_subsystem.rs  fixture_03_tasks.rs  fixture_04_dev.rs  fixture_05_templates.rs  helpers.rs
src-tauri/tests/test_support/: fixture_project.rs  mod.rs
(+809 files in other folders)
