[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/yaml-db",
]

[workspace.package]
authors = ["vince"]
edition = "2021"
rust-version = "1.92"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
fs2 = "0.4"
