[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/ralph-rag",
    "crates/sqlite-db",
    "crates/prompt-builder",
]

[workspace.package]
authors = ["vince"]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
