[package]
name = "ralph4days"
version = "0.1.0"
description = "Ralph Loop Desktop Application - Autonomous multi-agent build system"
authors = ["vince"]
edition = "2021"

[lib]
name = "ralph4days_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"

