[package]
name = "ralph4days"
version = "0.1.0"
description = "Ralph Loop Desktop Application - Autonomous multi-agent build system"
authors = ["vince"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "ralph4days_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "dynamic-acl"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
dirs = "5"
chrono = "0.4"
serde_yaml = "0.9"
regex = "1.10"
lazy_static = "1.4"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# Fast release builds for development testing
[profile.release-dev]
inherits = "release"
lto = false
codegen-units = 16
strip = false

