[package]
name = "ralph4days"
version = "0.1.0"
description = "Ralph4days Desktop Application - Parallel task execution orchestration system"
authors = ["vince"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "ralph4days_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sqlite-db = { path = "../crates/sqlite-db" }
prompt-builder = { path = "../crates/prompt-builder" }
ralph-external = { path = "../crates/ralph-external" }
predefined-disciplines = { path = "../crates/predefined-disciplines" }
ralph-errors = { workspace = true }
tauri = { version = "2", default-features = false, features = ["wry", "dynamic-acl"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
dirs = "5"
chrono = "0.4"
portable-pty = "0.9"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
ts-rs = { workspace = true }
ralph-macros = { workspace = true }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# Fast release builds for development testing
[profile.release-dev]
inherits = "release"
lto = false
codegen-units = 16
strip = false
