[package]
name = "ralph-contracts"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
ralph-macros = { workspace = true }
ralph-errors = { workspace = true }

