[package]
name = "ralph-external"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "External service integrations (Ollama LLM, ComfyUI, Qdrant)"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
thiserror = "2"
ralph-errors = { workspace = true }
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6"
