[package]
name = "ralph-rag"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Feature-scoped RAG data model for cross-iteration agent memory"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ralph4days/ralph4days"
keywords = ["rag", "agent-memory", "feature-scoped", "jsonl", "qdrant"]
categories = ["data-structures", "database"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v5"] }
