[package]
name = "sqlite-db"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
ralph-rag = { path = "../ralph-rag" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
chrono = { workspace = true }
ralph-errors = { workspace = true }
tracing = "0.1"
ts-rs = { workspace = true }
ralph-macros = { workspace = true }

[dev-dependencies]
tempfile = "3"
