[package]
name = "yaml-db"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Multi-file YAML database for managing PRD tasks, features, disciplines, and metadata"
license = "MIT OR Apache-2.0"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
thiserror.workspace = true
fs2.workspace = true

[dev-dependencies]
tempfile = "3"
insta = { version = "1.40", features = ["yaml"] }
